--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+   
+    <script src="https://js.stripe.com/v3/"></script>
  
    <link
      rel="stylesheet"
